# studies

./: .gitignore  Makefile  README.md  config.env  internet.nft  vpn-passthrough-connectivity.service  vpn-passthrough-internet.service  vpn-passthrough-netns.service  vpn-passthrough-pia.service
advanced-patterns-with-dlt/: pyproject.toml
advanced-patterns-with-dlt/pipelines/app/: state.json  trace.pickle
advanced-patterns-with-dlt/pipelines/app/load/loaded/1751314557.153243/: load_package_state.json  schema.json
advanced-patterns-with-dlt/pipelines/app/load/loaded/1751314557.153243/completed_jobs/: _dlt_pipeline_state.bf9c58dbc4.0.insert_values  contacts.c88a07721f.0.sql  contacts.f8fdf12bbc.0.insert_values
advanced-patterns-with-dlt/pipelines/app/load/loaded/1751314557.2726088/: applied_schema_updates.json  load_package_state.json  schema.json
advanced-patterns-with-dlt/pipelines/app/load/loaded/1751314557.2726088/completed_jobs/: _dlt_pipeline_state.a8dae9591e.0.insert_values  events.1a8888f794.0.sql  events.eac19d8abd.0.insert_values
advanced-patterns-with-dlt/pipelines/app/schemas/: app.schema.json
advanced-patterns-with-dlt/src/radium226/advanced_patterns_with_dlt/: __main__.py
advanced-patterns-with-dlt/src/radium226/advanced_patterns_with_dlt/sources/app/: __init__.py
advanced-patterns-with-dlt/src/radium226/advanced_patterns_with_dlt/spi/: __init__.py
agentic-workflow/: mise.toml  pyproject.toml
agentic-workflow/src/radium226/studies/agentic_workflow/: ai.py  cli.py  slack.py
chatbot/: ngrok.yml
chatbot/api/: .gitignore  pyproject.toml
chatbot/api/src/radium226/bot/api/: __init__.py  cli.py
dbus/controller/dbus-controller/: pyproject.toml
dbus/controller/dbus-controller/src/dbus_controller/cli/: __init__.py  app.py
dbus/executor/: .gitignore  CLAUDE.md  pyproject.toml  test.py  test2.py  witness.py
dbus/executor/src/radium226/executor/client/: cli.py
dbus/executor/src/radium226/executor/client/domain/: __init__.py  execution.py  executor.py
dbus/executor/src/radium226/executor/daemon/: cli.py  service.py
dbus/executor/src/radium226/executor/daemon/domain/: __init__.py  execution.py  executor.py
dbus/executor/src/radium226/executor/shared/: __init__.py  mode.py  redirect.py
dbus/executor/src/radium226/executor/shared/dbus/: __init__.py  command_not_found.py  execution_interface.py  executor_interface.py  open_bus.py
dbus/sdbus-example/: main.py  pyproject.toml
dbus/sdbus-example/tests/: test_sdbus.py
dummy-app/: PKGBUILD.in  pyproject.toml
dummy-app/src/dummy_app/: app.py
face-recognition-with-mediapipe/: pyproject.toml
face-recognition-with-mediapipe/src/: main.py
ipc/: .gitignore  CLAUDE.md  pyproject.toml
ipc/src/radium226/studies/ipc/: client.py  ipc.py  protocol.py  server.py  transport.py
ipc/src/radium226/studies/ipc/cli/: app.py  messages.py
python-entrypoints/: pyproject.toml
python-entrypoints/src/data_platform/: app.py  data_platform.py
python-entrypoints/src/data_platform/sources/: __init__.py  foo.py  spi.py
python-entrypoints/tests/: test_to_create_group.py
python-monorepo-using-earthly/tools/hubspot/: Earthfile  README.md  pyproject.toml
python-monorepo-using-earthly/tools/hubspot/src/radium226_hubspot/: __main__.py
try-dbus-daemon-for-privilege-escalation/: .gitignore  CLAUDE.md  DBUS_CONFIG.md  PRIVILEGE_ESCALATION.md  README.md  pyproject.toml  radium226-run.install
try-dbus-daemon-for-privilege-escalation/dbus-config/: radium226-command-executor.service
try-dbus-daemon-for-privilege-escalation/dbus-config/system-services/: com.radium226.CommandExecutor.service
try-dbus-daemon-for-privilege-escalation/dbus-config/system.d/: com.radium226.CommandExecutor.conf
try-dbus-daemon-for-privilege-escalation/src/radium226/run/client/: app.py  cli.py  core.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/daemon/: __init__.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/daemon/cli/: app.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/daemon/core/: __init__.py  execution.py  executor.py  runner.py  runner_manager.py  types.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/daemon/dbus/: __init__.py  runner_interface.py  runner_manager_interface.py  server_interface.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/server/: __init__.py  app.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/server/cli/: __init__.py  app.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/server/core/: __init__.py  runner.py  server.py  types.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/server/dbus/: runner_interface.py  server_interface.py
try-dbus-daemon-for-privilege-escalation/src/radium226/run/shared/: __init__.py  dbus.py  types.py
try-dbus-daemon-for-privilege-escalation/tests/: conftest.py  script.sh  test_cleanup.py  test_e2e.py  test_server.py
try-gemini/: .gitignore  Makefile  main.py  mise.toml  public.key  pyproject.toml  test.py  variables.env
try-gemini/make/: target
try-gemini/src/radium226/coach/: __init__.py  app.py  models.py
uv-packages-in-sibling-folders/modules/an-app/: pyproject.toml
uv-packages-in-sibling-folders/modules/an-app/src/radium226/apps/an_app/: __init__.py  __main__.py
varlink-with-fd/: .gitignore  pyproject.toml
varlink-with-fd/.claude/skills/test-project/: SKILL.md
varlink-with-fd/src/varlink_with_fd/: __init__.py  client.py  protocol.py  server.py  socket.py
varlink-with-fd/tests/: test_integration.py  test_protocol.py  test_socket.py
video-analysis/: .gitignore  CLAUDE.md  pyproject.toml
video-analysis/runpod_worker/: Dockerfile  server.py
video-analysis/samples/: generate-video
video-analysis/src/video_analysis/: __init__.py  __main__.py  cli.py  scene.py  stubs.py  tracker.py  types.py  video.py
video-analysis/tests/: conftest.py  test_pipeline.py  test_scene.py  test_video.py
vpn-passthrough/vpn-passthrough/app/: README.md  pyproject.toml
vpn-passthrough/vpn-passthrough/app/src/vpn_passthrough/: app.py  pia.py
(+188 files in other folders)
