[project]
name = "advanced-patterns-with-dlt"
version = "0.1.0"
description = "Core SPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt>=1.12.3",
    "duckdb>=1.3.1",
    "loguru>=0.7.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb[cli]>=1.3.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/radium226/advanced_patterns_with_dlt"]
