[project]
name = "radium226-studies-agentic-workflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.0",
    "loguru>=0.7.3",
    "pydantic-ai>=1.31.0",
    "python-dotenv>=1.2.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/radium226/studies/agentic_workflow"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-custom-exit-code>=0.3.0",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=no --strict-markers"
asyncio_mode = "auto"
markers = [
    
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/"
]

[project.scripts]
bot = "radium226.studies.agentic_workflow.cli:app"
