[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adrien", email = ""},
]
dependencies = [
    "mediapipe>=0.10.3",
    "opencv-python>=4.8.0.76",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

