[project]
name = "radium226-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dbus-fast>=2.24.4",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts]
rund = "radium226.run.daemon.cli:app"
run = "radium226.run.client.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radium226"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.1",
    "ruff>=0.12.3",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=tee-sys"
asyncio_mode = "auto"
markers = [
    "e2e: mark a test as an end-to-end test.",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/"
]
