[project]
name = "video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "radium226", email = "radium226@rouages.xyz" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
