[project]
name = "video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "radium226", email = "radium226@rouages.xyz" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "deepface>=0.0.99",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "supervision>=0.27.0.post2",
    "tf-keras>=2.21.0",
    "websockets>=15.0",
]

[project.scripts]
analyse-video = "video_analysis:cli"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "loguru-mypy>=0.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
