[project]
name = "radium226-bot-api"
version = "0.1.0"
description = "API for the bot"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "llm>=0.26",
    "llm-anthropic>=0.17",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/radium226/bot/api"]

[project.scripts]
radium226-bot-api = "radium226.bot.api:cli"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
incremental = false
ignore_errors = false
pretty = true
show_error_context = true
show_traceback = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
