[project]
name = "radium226-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "sdbus>=0.14.0",
]

[project.scripts]
executord = "radium226.executor.daemon:app"
executor = "radium226.executor.client:app"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radium226"]
