[project]
name = "dbus-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "sdbus>=0.14.0",
]

[project.scripts]
dbus-controller = "dbus_controller.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
