[project]
name = "vpn-passthrough"
version = "0.1.0"
description = "VPN Passthrough"
authors = [
    {name = "radium226", email = "radium226@rouages.xyz"},
]
dependencies = [
    "click>=8.1.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
vpn-passthrough = "vpn_passthrough:app"

[tool.pdm]
distribution = true
